who can access view budget adjusted

--- a/docs/product/simplepor/access_control.mdx
+++ b/docs/product/simplepor/access_control.mdx
@@ -27,7 +27,7 @@ Lets look at the various access levels and what such users can do or cannot do.
 | Vendor | Create Vendor   | :white_check_mark: | :white_check_mark: |                    |                    |                    |
 | Vendor | Edit Vendor     | :white_check_mark: | :white_check_mark: |                    |                    |                    |
 | Vendor | Delete Vendor   | :white_check_mark: | :white_check_mark: |                    |                    |                    |
-| Budget | View Budgets    | :white_check_mark: | :white_check_mark: | :white_check_mark: | :white_check_mark: | :white_check_mark: |
+| Budget | View Budgets    | :white_check_mark: | approver | approver | :white_check_mark: | approver |
 | Budget | Create Budget   | :white_check_mark: |                    |                    | :white_check_mark: |                    |
 | Budget | Edit Budget     | :white_check_mark: |                    |                    | :white_check_mark: |                    |
 | User   | View Users      | :white_check_mark: |                    |                    |                    |                    |
