--- a/docs/product/simplepor/approvals/about_approvals.mdx
+++ b/docs/product/simplepor/approvals/about_approvals.mdx
@@ -2,3 +2,5 @@
 title: About approvals
 sidebar_position: 2
 ---
+
+POR app supports up to 2 levels of approvals. Level 1 approver is generally the manager and Level 2 approver is generally the senior manager. 
