--- a/docs/product/simplepor/payment_schedule/about.mdx
+++ b/docs/product/simplepor/payment_schedule/about.mdx
@@ -2,3 +2,5 @@
 title: About Payment Schedules
 sidebar_position: 2
 ---
+
+As a buyer, depending on your relationship with the vendor, you might have agreed on certain payment terms with the vendor. Maybe 50% upfront and 50% on completion of work. How do you communicate this to the finance team? Thats where payment schedule comes handy. 
